# hdl-signature

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hdl_signature/: __init__.py  _cst.py  _snippet.py  _vhdl.md  _vhdl.py  _vhdl_declaration.py  _vhdl_instantiate.py  declaration.py  instantiate.md  instantiate.py  ir.py  parser.py
