[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hdl-signature"
version = "0.1.0"
description = "Parses VHDL/Verilog entity and module declarations into a shared interface model, rendered as instantiation templates or documentation diagrams."
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Maciej Paweł Kopeć", email = "maciejpkopec@gmail.com" }]
dependencies = ["tree-sitter", "tree-sitter-vhdl", "jinja2"]

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/hdl_signature"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
